--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,44 @@
 {
     margin: 0;
 }
+
+html
+{
+    height: 100%;
+}
+
+body
+{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#map-canvas
+{
+    width: 100%;
+    height: 100%;
+}
+
+h1
+{
+    position: absolute;
+    background-color: #111;
+    color: white;
+    padding: 10px;
+    font-weight: 200;
+    z-index: 10000;
+}
+
+#all-examples-info
+{
+    position:absolute;
+    background:white;
+    font-size:16px;
+    padding:20px;
+    bottom:20px;
+    width:350px;
+    line-height:150%;
+    border:1px solid rgba(0,0,0,.2);
+}
