--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,26 @@
 *
 {
     margin: 0;
+    padding: 0;
 }
 
 html
 {
-    height: 100%;
+    min-height: 100%;
+    width: 100%;
+    display: flex;
 }
 
 body
 {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+    flex: 1;
+    display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #map-canvas
 {
-    width: 100%;
-    height: 100%;
+    flex: 1;
 }
 
 h1
