--- a/css/styles.css
+++ b/css/styles.css
@@ -18,19 +18,48 @@ body
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.wrapper
+{
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+}
+
 #map-canvas
 {
+    flex: 8;
+}
+
+.menu-bar
+{
+    background-color: white;
+    color: black;
+    padding: 10px;
     flex: 1;
 }
 
-h1
+label
 {
-    position: absolute;
-    background-color: #111;
-    color: white;
-    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 1.2em;
+}
+
+input
+{
+    box-sizing: border-box;
+    padding: 12px 16px;
+    font-size: 1.2em;
+}
+
+input[type="submit"]
+{
+    margin-top: 16px;
+}
+
+#menu-bar h1
+{
     font-weight: 200;
-    z-index: 10000;
 }
 
 #all-examples-info
