--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,13 @@ input[type="submit"]
     margin-top: 16px;
 }
 
+.reasoningButton
+{
+    margin-top: 16px;
+    padding: 12px 16px;
+    font-size: 1.2em;
+}
+
 #menu-bar h1
 {
     font-weight: 200;
